test/FAIL/breakcmd/01_test_break.emu
#-#-------
#TEST_RETURN_CODE=FAIL           
#TEST_COMMENT="unknown command"
#-------

breaq
